# NavigationProject

./: .gitignore  README.md  SLAM_RESULTS.md  homework2.md  homework2_Answers.md  nuturtle.rosinstall
nuslam/: CMakeLists.txt  package.xml
nuslam/include/nuslam/: circle_detection.hpp
nuslam/launch/: basic.launch  slam.launch
nuslam/msg/: FilterOutput.msg  TurtleMap.msg
nuslam/src/: CMakeLists.txt  analysis.cpp  circle_detection.cpp  draw_map.cpp  landmarks.cpp  package.xml  slam.cpp
nuslam/tests/: circle_detection_test.cpp
nuturtle_description/: CMakeLists.txt  README.md  package.xml
nuturtle_description/config/: diff_drive.rviz  diff_drive_odometry.rviz  diff_params.yaml
nuturtle_description/launch/: ddrive.launch  view_diff_drive.launch
nuturtle_description/urdf/: diff_drive.urdf.xacro  inertia_tensor.macro.xacro
nuturtle_gazebo/: CMakeLists.txt  package.xml
nuturtle_gazebo/launch/: gazebo_waypoints.launch  turtlebot_gazebo.launch
nuturtle_gazebo/src/: landmarks.cpp  turtle_drive_plugin.cpp
nuturtle_gazebo/urdf/: diff_drive.gazebo.xacro  diff_drive.urdf.xacro
nuturtle_robot/: CMakeLists.txt  README.md  homework2.md  package.xml
nuturtle_robot/config/: movement.rviz  waypoint.rviz
nuturtle_robot/launch/: basic_remote.launch  follow_waypoints.launch  test_linear_movement.launch  test_movement.launch
nuturtle_robot/src/: rotation.cpp  translation.cpp  turtle_interface.cpp  turtle_waypoint.cpp
nuturtle_robot/srv/: StartRotation.srv  StartTranslation.srv
nuturtle_robot/test/: turtle_interface.test  turtle_interface1.test  turtle_interface2.test  turtle_interface3.test  turtle_interface4.test  turtle_interface_test.cpp  turtle_interface_test1.cpp  turtle_interface_test2.cpp  turtle_interface_test3.cpp  turtle_interface_test4.cpp
rigid2d/: C002_answers.md  CMakeLists.txt  main.cpp  package.xml  rigid2d.cpp  rigid2d.hpp  test1_answer.txt  test1_input.txt  test_compile.bash
rigid2d/include/rigid2d/: fake_diff_encoders.hpp  odometry.hpp  rigid2d.hpp  waypoint.hpp  waypoints.hpp
rigid2d/launch/: odometry.launch
rigid2d/src/: fake_diff_encoders.cpp  odometry.cpp  rigid2d_node.cpp
rigid2d/src/rigid2d/: rigid2d.cpp  waypoint.cpp
rigid2d/srv/: SetPose.srv
rigid2d/tests/: rigid2d_unit_test.cpp
tsim/: CMakeLists.txt  README.md  package.xml
tsim/config/: rect_trajectory.yaml
tsim/include/: turtle_rect.hpp  turtle_way.hpp
tsim/launch/: trect.launch  turtle_odom.launch  turtle_pent.launch  turtle_rect.launch
tsim/msg/: ErrorPose.msg
tsim/src/: turtle_rect.cpp  turtle_way.cpp
